# final-ai-essentials

./: .gitignore  PROJECT_SUMMARY.md  QUICKSTART_WEB.md  README.md  logistic.ipynb  main.ipynb  pca.ipynb  pyproject.toml  requirements.txt  svm.ipynb
data/: HR_Analytics.csv
web/: AGEGROUP_FEATURE.md  BUGFIXES.md  INSTALL.md  OVERVIEW.md  README.md  app.py
web/static/: index.html  script.js  styles.css
