[project]
name = "aitu-programming-for-ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "jupytext>=1.18.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pre-commit>=4.4.0",
    "pydantic>=2.12.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "torch>=2.9.1",
    "uvicorn[standard]>=0.38.0",
]
